test/corpus/simple_tags.txt
================================================================================
Access public
================================================================================

@access public

---

(document
  (tag
    (tag_access)))

================================================================================
Access private
================================================================================

@access private

---

(document
  (tag
    (tag_access)))

================================================================================
Author
================================================================================

@author John Doe

---

(document
  (tag
    (tag_author
      (line_description))))

================================================================================
Deprecated with message
================================================================================

@deprecated Use the new API instead

---

(document
  (tag
    (tag_deprecated
      (line_description))))

================================================================================
Todo
================================================================================

@todo Implement error handling

---

(document
  (tag
    (tag_todo
      (line_description))))

================================================================================
Throw
================================================================================

@throw Error if value is invalid

---

(document
  (tag
    (tag_throw
      (line_description))))

================================================================================
Ignore
================================================================================

@ignore This is internal

---

(document
  (tag
    (tag_ignore
      (line_description))))

================================================================================
Output
================================================================================

@output Generates CSS grid styles

---

(document
  (tag
    (tag_output
      (line_description))))

================================================================================
Since with version
================================================================================

@since 1.0.0

---

(document
  (tag
    (tag_since
      (version))))

================================================================================
Since with version and description
================================================================================

@since 2.1.0 Added new feature

---

(document
  (tag
    (tag_since
      (version)
      (line_description))))

================================================================================
Type single
================================================================================

@type String

---

(document
  (tag
    (tag_type
      (type_name))))

================================================================================
Type union
================================================================================

@type String | Number | Bool

---

(document
  (tag
    (tag_type
      (type_name)
      (type_name)
      (type_name))))
