test/corpus/tag_example.txt
================================================================================
Example with language and description
================================================================================

@example scss - Usage example
  .foo {
    color: red;
  }

---

(document
  (tag
    (tag_example
      (example_language)
      (tag_description
        (line_description))
      (code_block
        (code_line)
        (code_line)
        (code_line)))))

================================================================================
Example with just language
================================================================================

@example css
  body { margin: 0; }

---

(document
  (tag
    (tag_example
      (example_language)
      (code_block
        (code_line)))))

================================================================================
Example with no language
================================================================================

@example
  some-code-here

---

(document
  (tag
    (tag_example
      (code_block
        (code_line)))))

================================================================================
Example with SCSS at-rules in code block
================================================================================

@example scss
  @include mixin();
  @if $condition {
    color: red;
  }

---

(document
  (tag
    (tag_example
      (example_language)
      (code_block
        (code_line)
        (code_line)
        (code_line)
        (code_line)))))

================================================================================
Example with empty lines in code block
================================================================================

@example scss
  .foo { color: red; }

  .bar { color: blue; }

---

(document
  (tag
    (tag_example
      (example_language)
      (code_block
        (code_line)
        (code_line)))))
