test/corpus/tag_link.txt
================================================================================
Link with URL only
================================================================================

@link http://example.com

---

(document
  (tag
    (tag_link
      (url))))

================================================================================
Link with HTTPS URL
================================================================================

@link https://sassdoc.com/annotations/

---

(document
  (tag
    (tag_link
      (url))))

================================================================================
Link with caption
================================================================================

@link https://sassdoc.com SassDoc Homepage

---

(document
  (tag
    (tag_link
      (url)
      (link_caption))))

================================================================================
Source alias
================================================================================

@source https://github.com/SassDoc/sassdoc

---

(document
  (tag
    (tag_link
      (url))))
