test/corpus/tag_return.txt
================================================================================
Return with type and description
================================================================================

@return {String} The result

---

(document
  (tag
    (tag_return
      (type
        (type_name))
      (line_description))))

================================================================================
Return with just type
================================================================================

@return {Map}

---

(document
  (tag
    (tag_return
      (type
        (type_name)))))

================================================================================
Return with union type
================================================================================

@return {String | Number | Null}

---

(document
  (tag
    (tag_return
      (type
        (type_name)
        (type_name)
        (type_name)))))

================================================================================
Returns alias
================================================================================

@returns {Bool}

---

(document
  (tag
    (tag_return
      (type
        (type_name)))))

================================================================================
Return with description only
================================================================================

@returns The computed value

---

(document
  (tag
    (tag_return
      (line_description))))
