test/corpus/tag_see.txt
================================================================================
See plain reference (defaults to function)
================================================================================

@see other-function

---

(document
  (tag
    (tag_see
      (see_reference))))

================================================================================
See with explicit mixin type
================================================================================

@see {mixin} my-mixin

---

(document
  (tag
    (tag_see
      (see_type
        (reference))
      (see_reference))))

================================================================================
See with explicit function type
================================================================================

@see {function} helper

---

(document
  (tag
    (tag_see
      (see_type
        (reference))
      (see_reference))))

================================================================================
See variable with $ prefix
================================================================================

@see $some-variable

---

(document
  (tag
    (tag_see
      (see_reference))))

================================================================================
See placeholder with % prefix
================================================================================

@see %some-placeholder

---

(document
  (tag
    (tag_see
      (see_reference))))

================================================================================
See with explicit variable type
================================================================================

@see {variable} config

---

(document
  (tag
    (tag_see
      (see_type
        (reference))
      (see_reference))))
