test/corpus/types.txt
================================================================================
Standard type name
================================================================================

@param {Map} $schema

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Lowercase type name
================================================================================

@param {number} $size

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Wildcard type
================================================================================

@param {*} $value

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Empty list type
================================================================================

@param {()} $empty

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Generic type
================================================================================

@param {List<Color>} $colors

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Rest type
================================================================================

@param {Map...} $schemas

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Hyphenated type name
================================================================================

@param {box-shadow} $shadow

---

(document
  (tag
    (tag_param
      (type
        (type_name))
      (variable_name))))

================================================================================
Union type with spaces
================================================================================

@param {String | Number} $value

---

(document
  (tag
    (tag_param
      (type
        (type_name)
        (type_name))
      (variable_name))))

================================================================================
Union type without spaces
================================================================================

@param {number|string} $value

---

(document
  (tag
    (tag_param
      (type
        (type_name)
        (type_name))
      (variable_name))))

================================================================================
Union type with wildcard
================================================================================

@param {Map | *} $value

---

(document
  (tag
    (tag_param
      (type
        (type_name)
        (type_name))
      (variable_name))))

================================================================================
Generic in union type
================================================================================

@param {List<Color> | Null} $colors

---

(document
  (tag
    (tag_param
      (type
        (type_name)
        (type_name))
      (variable_name))))

================================================================================
Rest in union type
================================================================================

@param {Map... | Null} $schemas

---

(document
  (tag
    (tag_param
      (type
        (type_name)
        (type_name))
      (variable_name))))

================================================================================
Return with wildcard type
================================================================================

@return {*}

---

(document
  (tag
    (tag_return
      (type
        (type_name)))))

================================================================================
Property with generic type
================================================================================

@prop {List<Color>} colors [null] - The color list

---

(document
  (tag
    (tag_property
      (type
        (type_name))
      (property_name)
      (default_value)
      (tag_description
        (line_description)))))
